// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servers, who needs 'em?  GET / 1`] = `
Array [
  Object {
    "id": "cool",
    "this": "is pretty cool",
  },
]
`;

exports[`servers, who needs 'em?  GET /:id - cool 1`] = `
Object {
  "data": Object {
    "id": "cool",
    "this": "is pretty cool",
  },
}
`;
